--- a/FoodieApplication/RestuarantManagementService/src/main/resources/application.properties
+++ b/FoodieApplication/RestuarantManagementService/src/main/resources/application.properties
@@ -2,5 +2,10 @@
 server.port=8090
 spring.data.mongodb.database=restaurantdb
 spring.data.mongodb.uri=mongodb://localhost:27017/restaurantdb
-spring.application.name=admin-service
 server.error.include-message=always
+
+spring.application.name=restuarant-management-service
+spring.cloud.compatibility-verifier.enabled=false
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=true
