--- a/FoodieApplication/adminService/src/main/resources/application.properties
+++ b/FoodieApplication/adminService/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 
-server.port=8081
+server.port=8083
 spring.data.mongodb.database=admindb
 spring.data.mongodb.uri=mongodb://localhost:27017/admindb
 spring.application.name=admin-service
 server.error.include-message=always
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.cloud.compatibility-verifier.enabled=false
+eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=true
