--- a/FoodieApplication/foodInventoryService/src/main/resources/application.properties
+++ b/FoodieApplication/foodInventoryService/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.data.mongodb.uri=mongodb://localhost:27017/restaurantandcuisine
 server.error.include-message=always
 
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+
+spring.application.name=food-inventory-service
+spring.cloud.compatibility-verifier.enabled=false
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=true
