--- a/FoodieApplication/FavouriteService/src/main/resources/application.properties
+++ b/FoodieApplication/FavouriteService/src/main/resources/application.properties
@@ -2,3 +2,9 @@ server.port=8087
 spring.data.mongodb.database=foodiedb
 spring.data.mongodb.uri=mongodb://localhost:27017/
 server.error.include-message=always
+
+spring.application.name=favourite-service
+spring.cloud.compatibility-verifier.enabled=false
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=true
