--- a/FoodieApplication/UserService/src/main/resources/application.properties
+++ b/FoodieApplication/UserService/src/main/resources/application.properties
@@ -2,3 +2,8 @@ server.port=8085
 spring.data.mongodb.database=foodiedb
 spring.data.mongodb.uri=mongodb://localhost:27017/
 server.error.include-message=always
+
+spring.application.name=user-service
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=true
