--- a/FoodieApplication/addRestuarantService/src/main/resources/application.properties
+++ b/FoodieApplication/addRestuarantService/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port = 8081
+
+spring.application.name=add-restuarant-service
+spring.cloud.compatibility-verifier.enabled=false
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=true
