--- a/FoodieApplication/searchService/src/main/resources/application.properties
+++ b/FoodieApplication/searchService/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-server.port = 8083
+server.port = 8084
 spring.data.mongodb.database=searchdb
 spring.data.mongodb.uri=mongodb://localhost:27017/searchdb
 server.error.include-message=always
 
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+
+spring.cloud.compatibility-verifier.enabled=false
+spring.application.name=search-service
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.fetchRegistry=true
+eureka.client.registerWithEureka=true
