--- a/FoodieApplication/UserAuthenticationService/src/main/resources/application.properties
+++ b/FoodieApplication/UserAuthenticationService/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 server.port=8086
 spring.datasource.url=jdbc:mysql://localhost:3306/fooddb
 spring.datasource.username=root
-spring.datasource.password=vskumar7796
+#spring.datasource.password=vskumar7796
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.application.name=user-authentication-service
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.cloud.compatibility-verifier.enabled=false
 eureka.client.fetchRegistry=true
 eureka.client.registerWithEureka=true
