--- a/FoodieApplication/searchService/src/main/resources/application.properties
+++ b/FoodieApplication/searchService/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.application.name=search-service
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.fetchRegistry=true
 eureka.client.registerWithEureka=true
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
