--- a/FoodieApplication/RestuarantManagementService/src/main/resources/application.properties
+++ b/FoodieApplication/RestuarantManagementService/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.cloud.compatibility-verifier.enabled=false
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.fetchRegistry=true
 eureka.client.registerWithEureka=true
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
