--- a/FoodieApplication/UserService/src/main/resources/application.properties
+++ b/FoodieApplication/UserService/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.application.name=user-service
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.fetchRegistry=true
 eureka.client.registerWithEureka=true
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
