--- a/FoodieApplication/pom.xml
+++ b/FoodieApplication/pom.xml
@@ -47,6 +47,7 @@
 		<module>RestuarantManagementService</module>
 		<module>searchService</module>
 		<module>EurekaService</module>
+		<module>OrderService</module>
 	</modules>
 
 	<build>
