--- a/FoodieApplication/UserService/pom.xml
+++ b/FoodieApplication/UserService/pom.xml
@@ -30,6 +30,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>3.1.1</version>
 		</dependency>
 
 		<dependency>
@@ -42,6 +43,13 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>3.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>net.anthavio</groupId>
+			<artifactId>anthavio-aspects</artifactId>
+			<version>1.0.0</version>
+			<scope>compile</scope>
 		</dependency>
 
 	</dependencies>
