--- a/FoodieApplication/addRestuarantService/pom.xml
+++ b/FoodieApplication/addRestuarantService/pom.xml
@@ -39,7 +39,13 @@
 			<artifactId>spring-boot-starter-amqp</artifactId>
 			<version>2.6.4</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>net.anthavio</groupId>
+            <artifactId>anthavio-aspects</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<dependencyManagement>
 		<dependencies>
