--- a/FoodieApplication/searchService/pom.xml
+++ b/FoodieApplication/searchService/pom.xml
@@ -42,7 +42,13 @@
 			<artifactId>spring-rabbit-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>net.anthavio</groupId>
+            <artifactId>anthavio-aspects</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<dependencyManagement>
 		<dependencies>
