--- a/FoodieApplication/pom.xml
+++ b/FoodieApplication/pom.xml
@@ -35,12 +35,6 @@
 			<version>1.18.22</version>
 			<scope>provided</scope>
 		</dependency>
-        <dependency>
-            <groupId>net.anthavio</groupId>
-            <artifactId>anthavio-aspects</artifactId>
-            <version>1.0.0</version>
-            <scope>compile</scope>
-        </dependency>
 
     </dependencies>
 	<modules>
@@ -54,6 +48,7 @@
 		<module>searchService</module>
 		<module>EurekaService</module>
 		<module>OrderService</module>
+		<module>apiGatewayService</module>
 	</modules>
 
 	<build>
@@ -62,6 +57,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<useSystemClassLoader>false</useSystemClassLoader>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
