--- a/FoodieApplication/searchService/src/main/resources/application.properties
+++ b/FoodieApplication/searchService/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.data.mongodb.database=searchdb
 spring.data.mongodb.uri=mongodb://localhost:27017/searchdb
 server.error.include-message=always
 
-#logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 
 spring.cloud.compatibility-verifier.enabled=false
 spring.application.name=search-service
