--- a/FoodieApplication/addRestuarantService/src/main/resources/application.properties
+++ b/FoodieApplication/addRestuarantService/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port = 8081
 
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 spring.application.name=add-restuarant-service
 spring.cloud.compatibility-verifier.enabled=false
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
