--- a/FoodieApplication/addRestuarantService/src/main/resources/application.properties
+++ b/FoodieApplication/addRestuarantService/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.cloud.compatibility-verifier.enabled=false
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.fetchRegistry=true
 eureka.client.registerWithEureka=true
+
+spring.data.mongodb.database=sendrejectrestdb
+spring.data.mongodb.uri=mongodb://localhost:27017/sendrejectrestdb
+server.error.include-message=always
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
