--- a/FoodieApplication/addRestuarantService/src/main/resources/application.properties
+++ b/FoodieApplication/addRestuarantService/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.data.mongodb.uri=mongodb://localhost:27017/sendrejectrestdb
 server.error.include-message=always
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+#upload.path=/uploads
+
+spring.servlet.multipart.max-file-size=700KB
+spring.servlet.multipart.max-request-size=700KB
