--- a/FoodieApplication/RestuarantManagementService/src/main/resources/application.properties
+++ b/FoodieApplication/RestuarantManagementService/src/main/resources/application.properties
@@ -9,4 +9,6 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.fetchRegistry=true
 eureka.client.registerWithEureka=true
 
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
