--- a/FoodieApplication/RestuarantManagementService/src/main/resources/application.properties
+++ b/FoodieApplication/RestuarantManagementService/src/main/resources/application.properties
@@ -12,3 +12,6 @@ eureka.client.registerWithEureka=true
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+spring.servlet.multipart.max-file-size=700KB
+spring.servlet.multipart.max-request-size=700KB
