--- a/FoodieApplication/addRestuarantService/pom.xml
+++ b/FoodieApplication/addRestuarantService/pom.xml
@@ -35,7 +35,15 @@
 			<artifactId>spring-boot-starter-amqp</artifactId>
 			<version>2.6.4</version>
 		</dependency>
-    </dependencies>
+
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+
+	</dependencies>
 
 	<dependencyManagement>
 		<dependencies>
