--- a/FoodieApplication/FavouriteService/src/main/resources/application.properties
+++ b/FoodieApplication/FavouriteService/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8087
-spring.data.mongodb.database=foodiedb
+spring.data.mongodb.database=favdb
 spring.data.mongodb.uri=mongodb://localhost:27017/
 server.error.include-message=always
 
