--- a/FoodieApplication/FavouriteService/pom.xml
+++ b/FoodieApplication/FavouriteService/pom.xml
@@ -34,7 +34,15 @@
 			<version>2.6.3</version>
 		</dependency>
 
-    </dependencies>
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+
+
+	</dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
