--- a/FoodieApplication/UserAuthenticationService/src/main/resources/application.properties
+++ b/FoodieApplication/UserAuthenticationService/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8086
 spring.datasource.url=jdbc:mysql://localhost:3306/fooddb
 spring.datasource.username=root
-#spring.datasource.password=vskumar7796
-spring.datasource.password=root
+spring.datasource.password=vskumar7796
+#spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
