--- a/FoodieApplication/frontend/FoodieApplication/package.json
+++ b/FoodieApplication/frontend/FoodieApplication/package.json
@@ -30,6 +30,7 @@
     "@angular/cli": "~13.2.3",
     "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.14",
     "@types/node": "^12.20.47",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
