--- a/FoodieApplication/frontend/FoodieApplication/package.json
+++ b/FoodieApplication/frontend/FoodieApplication/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.2.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ngx-google-places-autocomplete": "^2.0.5",
     "rxjs": "~7.5.0",
     "zone.js": "~0.11.4"
   },
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "~13.2.3",
     "@angular/cli": "~13.2.3",
     "@angular/compiler-cli": "~13.2.0",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.10.0",
     "@types/jquery": "^3.5.14",
     "@types/node": "^12.20.47",
