--- a/FoodieApplication/frontend/FoodieApplication/package.json
+++ b/FoodieApplication/frontend/FoodieApplication/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.2.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ngx-toastr": "^14.2.3",
     "rxjs": "~7.5.0",
     "zone.js": "~0.11.4"
   },
