--- a/FoodieApplication/frontend/FoodieApplication/package.json
+++ b/FoodieApplication/frontend/FoodieApplication/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "ngx-google-places-autocomplete": "^2.0.5",
+    "ngx-toastr": "^14.2.3",
     "rxjs": "~7.5.0",
     "zone.js": "~0.11.4"
   },
