--- a/FoodieApplication/FavouriteService/src/main/resources/application.properties
+++ b/FoodieApplication/FavouriteService/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8087
 spring.data.mongodb.database=favdb
-spring.data.mongodb.uri=mongodb://localhost:27017/
+#spring.data.mongodb.uri=mongodb://localhost:27017/
+spring.data.mongodb.uri=${MONGO_URI:mongodb://localhost:27017/favdb}
 server.error.include-message=always
 
 spring.application.name=favourite-service
