--- a/FoodieApplication/OrderService/pom.xml
+++ b/FoodieApplication/OrderService/pom.xml
@@ -72,6 +72,7 @@
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
+			<version>1.9.8</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
