--- a/FoodieApplication/OrderService/src/main/resources/application.properties
+++ b/FoodieApplication/OrderService/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port = 8088
 spring.data.mongodb.database=orderdb
-spring.data.mongodb.uri=mongodb://localhost:27017/orderdb
+spring.data.mongodb.uri=${MONGO_URI:mongodb://localhost:27017/orderdb}
+#spring.data.mongodb.uri=mongodb://localhost:27017/orderdb
 server.error.include-message=always
 
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
