--- a/FoodieApplication/RestuarantManagementService/src/main/resources/application.properties
+++ b/FoodieApplication/RestuarantManagementService/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8090
 spring.data.mongodb.database=restaurantdb
-spring.data.mongodb.uri=mongodb://localhost:27017/restaurantdb
+
+spring.data.mongodb.uri=${MONGO_URI:mongodb://localhost:27017/restaurantdb}
+#spring.data.mongodb.uri=mongodb://localhost:27017/restaurantdb
 server.error.include-message=always
 
 spring.application.name=restuarant-management-service
