--- a/FoodieApplication/UserService/src/main/resources/application.properties
+++ b/FoodieApplication/UserService/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8085
 spring.data.mongodb.database=foodiedb
-spring.data.mongodb.uri=mongodb://localhost:27017/
+spring.data.mongodb.uri=${MONGO_URI:mongodb://localhost:27017/foodiedb}
+#spring.data.mongodb.uri=mongodb://localhost:27017/
 server.error.include-message=always
 
 spring.application.name=user-service
