--- a/FoodieApplication/addRestuarantService/src/main/resources/application.properties
+++ b/FoodieApplication/addRestuarantService/src/main/resources/application.properties
@@ -8,7 +8,8 @@ eureka.client.fetchRegistry=true
 eureka.client.registerWithEureka=true
 
 spring.data.mongodb.database=sendrejectrestdb
-spring.data.mongodb.uri=mongodb://localhost:27017/sendrejectrestdb
+spring.data.mongodb.uri=${MONGO_URI:mongodb://localhost:27017/sendrejectrestdb}
+#spring.data.mongodb.uri=mongodb://localhost:27017/sendrejectrestdb
 server.error.include-message=always
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
