--- a/FoodieApplication/foodInventoryService/src/main/resources/application.properties
+++ b/FoodieApplication/foodInventoryService/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port = 8082
 spring.data.mongodb.database=restaurantandcuisine
-spring.data.mongodb.uri=mongodb://localhost:27017/restaurantandcuisine
+#spring.data.mongodb.uri=mongodb://localhost:27017/restaurantandcuisine
+spring.data.mongodb.uri=${MONGO_URI:mongodb://localhost:27017/restaurantandcuisine}
 server.error.include-message=always
 
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
