--- a/FoodieApplication/UserAuthenticationService/src/main/resources/application.properties
+++ b/FoodieApplication/UserAuthenticationService/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8086
-spring.datasource.url=jdbc:mysql://localhost:3306/fooddb
+#spring.datasource.url=jdbc:mysql://localhost:3306/fooddb
+spring.datasource.url=jdbc:mysql://localhost:3306/fooddb?useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=vskumar7796
 #spring.datasource.password=root
