--- a/FoodieApplication/searchService/src/main/resources/application.properties
+++ b/FoodieApplication/searchService/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port = 8084
 spring.data.mongodb.database=searchdb
-spring.data.mongodb.uri=mongodb://localhost:27017/searchdb
+spring.data.mongodb.uri=${MONGO_URI:mongodb://localhost:27017/searchdb}
+#spring.data.mongodb.uri=mongodb://localhost:27017/searchdb
 server.error.include-message=always
 
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
