--- a/FoodieApplication/frontend/FoodieApplication/tsconfig.json
+++ b/FoodieApplication/frontend/FoodieApplication/tsconfig.json
@@ -17,7 +17,7 @@
     "importHelpers": true,
     "target": "es2017",
     "module": "es2020",
-    "types": [ "googlemaps"],
+    "types": [ "google.maps"],
     "lib": [
       "es2020",
       "dom"
